--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
 
                     <li>
-                        <a href="#works" class="link main-nav-link">Curriculum
+                        <a href="HTML/curriculum.html" class="link main-nav-link">Curriculum
                             <span>&nbsp;&frasl;&gt;</span></a>
                     </li>
 
