--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="section-header">
         <nav class="nav flex-row">
 
-            <a href="index" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
+            <a href="HTML/curriculum.html" class="logo-link"><img src="Img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
 
 
 
