--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                                     <li class="skills-name">
                                         <img src="img/frontend/html.png" width="25px"><img />
-                                        <p>EC2</p>
+                                        <p>HTML</p>
                                     </li>
                                     <li class="skills-name">
                                         <img src="img/frontend/css3.png" width="25px"><img />
@@ -193,7 +193,7 @@
                                 <ul class="skills-data-list">
 
                                     <li class="skills-name">
-                                        <img src="img/Aws/ec2.png" width="25px" alt="ec2"><img />
+                                        <img src="img/Aws/EC2.png" width="25px" alt="ec2"><img />
                                         <p>EC2</p>
                                     </li>
 
