--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                                     </li>
                                     <li class="skills-name">
                                         <img src="img/frontend/css3.png" width="25px"><img />
-                                        <p>css3</p>
+                                        <p>CSS</p>
                                     </li>
                                     <li class="skills-name">
                                         <img src="img/frontend/js.png" width="25px"><img />
-                                        <p>JavaScript</p>
+                                        <p>Java Script</p>
                                     </li>
                                     <li class="skills-name">
                                         <img src="img/frontend/react.png" width="25px"><img />
@@ -193,33 +193,33 @@
                                 <ul class="skills-data-list">
 
                                     <li class="skills-name">
-                                        <img src="img/Aws/EC2.png" width="25px" alt="ec2"><img />
+                                        <img src="img/aws/ec2.png" width="25px" alt="ec2"><img />
                                         <p>EC2</p>
                                     </li>
 
 
                                     <li class="skills-name">
-                                        <img src="img/Aws/s3.png" width="25px" alt="s3"></img>
+                                        <img src="img/aws/s3.png" width="25px" alt="s3"></img>
                                         <p>S3</p>
                                     </li>
 
 
                                     <li class="skills-name">
-                                        <img src="img/Aws/rds.png" width="25px" alt="RDS"></img>
+                                        <img src="img/aws/rds.png" width="25px" alt="RDS"></img>
                                         <p>RDS</p>
                                     </li>
 
 
                                     <li class="skills-name">
-                                        <img src="img/Aws/qs.png" width="25px" alt="Quick Sight"></img>
+                                        <img src="img/aws/qs.png" width="25px" alt="Quick Sight"></img>
                                         <p>Quick Sight</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/Aws/Athena.png" width="25px" alt="Athena"></img>
+                                        <img src="img/aws/athena.png" width="25px" alt="Athena"></img>
                                         <p>Athena</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/Aws/Glue.png" width="25px" alt="Glue"></img>
+                                        <img src="img/aws/glue.png" width="25px" alt="Glue"></img>
                                         <p>Glue</p>
                                     </li>
 
@@ -288,21 +288,23 @@
         </section>
     </main>
 
-    <footer>
-        <p class="flex-row-center">&copy; 2024 Carlos Mario Rivera. Todos los derechos reservados.</p>
-        <nav class="nav flex-row">
-            <a href="#" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
-            <div class="nav-menu">
-                <ul class="nav-list">
-                    <li><a href="HTML/Aboutpage/about.html" target="_blank">Hobbies </a></li>
-                    <li><a href="#about" class="link main-nav-link">Acerca de mi </a></li>
-                    <li><a href="#skills" class="link main-nav-link">Mis Habilidades </a>
-                    </li>
+    <footer class="section-footer">
 
-                </ul>
+        <nav class="flex-row">
+
+
+            <a href="#" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
+            <ul class="nav-list">
+                <li><a href="HTML/Aboutpage/about.html" target="_blank">Hobbies </a></li>
+                <li><a href="#about" class="social-links">Acerca de mi </a></li>
+                <li><a href="#skills" class="social-links">Mis Habilidades </a>
+                </li>
+
+            </ul>
             </div>
 
         </nav>
+        <p class="flex-row-center">&copy; 2024 Carlos Mario Rivera. Todos los derechos reservados.</p>
     </footer>
 
     <!-- Ionicons -->
