--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="#about" class="link main-nav-link">Acerca de mi </a></li>
                     <li><a href="#skills" class="link main-nav-link">Mis Habilidades <span>&nbsp;&frasl;&gt;</span></a>
                     </li>
-                    <li><a href="HTML/curriculum.html" class="link main-nav-link">Curriculum
+                    <li><a href="html/curriculum.html" class="link main-nav-link">Curriculum
                             <span>&nbsp;&frasl;&gt;</span></a></li>
                     <li><a href="#contact" class="link main-nav-link">Contacto <span>&nbsp;&frasl;&gt;</span></a></li>
                 </ul>
@@ -92,7 +92,7 @@
                         <div class="hero-text-box flex-col">
                             <div class="hero-main-title-box">
                                 <p class="enter-text">Bienvenido al
-                                    <a href="HTML/Aboutpage/about.html" target="_blank">Universo </a> de
+                                    <a href="html/Aboutpage/about.html" target="_blank">Universo </a> de
                                 </p>
                                 <h1 class="heading-primary">CarlosMarioRivera.com</h1>
                                 <p class="hero-subheading">
@@ -104,7 +104,7 @@
                                     <br><br>Mi objetivo es proporcionar soluciones robustas y de gran utilidad a las
                                     personas
                                 </p>
-                                <a href="HTML/curriculum.html" class="link btn btn-outline" target="_blank">Mi
+                                <a href="html/curriculum.html" class="link btn btn-outline" target="_blank">Mi
                                     Curriculum</a>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
 
             <a href="#" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
             <ul class="nav-list">
-                <li><a href="HTML/Aboutpage/about.html" target="_blank">Hobbies </a></li>
+                <li><a href="html/Aboutpage/about.html" target="_blank">Hobbies </a></li>
                 <li><a href="#about" class="social-links">Acerca de mi </a></li>
                 <li><a href="#skills" class="social-links">Mis Habilidades </a>
                 </li>
