--- a/index.html
+++ b/index.html
@@ -5,72 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- HTML Meta Tags -->
     <title>Carlos Mario Rivera & Portfolio</title>
-    <meta name="description" content="Personal Portfolio website of Carlos Mario Rivera . A mobile dev designer.">
-
-    <!-- FAVICON -->
-
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <meta name="description" content="Personal Portfolio website of Carlos Mario Rivera. A mobile dev designer.">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon32.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="img/favicon/favicon64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="img/favicon/favicon128.png">
+    <link rel="icon" type="image/png" sizes="250x250" href="img/favicon/favicon.png">
     <link rel="manifest" href="img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="img/favicon/favicon.png">
     <meta name="theme-color" content="#ffffff">
-
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <!-- CSS -->
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link rel="stylesheet" href="css/cookie_consent.css">
     <link rel="stylesheet" href="css/scrollefects.css">
-    <!--     <link rel="stylesheet" href="css/slideraws.css">
+    <!-- Comentado hasta confirmar la necesidad de estos archivos
+    <link rel="stylesheet" href="css/slideraws.css">
     <link rel="stylesheet" href="css/silder2aws.css"> -->
     <link rel="stylesheet" href="css/styles3.css">
 
-    <!-- JavaScript -->
 
 </head>
+
 
 <body>
 
     <header class="section-header">
         <nav class="nav flex-row">
-            <a href="#" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
-            <div class="nav-menu">
+            <a href="#" class="logo-link">
+                <img src="img/logo.jpg" alt="Logo de Carlos Mario Rivera" class="logo" />
+            </a>
+            <div class="nav-menu" aria-label="Menú principal">
                 <ul class="nav-list">
-                    <li><a href="#about" class="link main-nav-link">Acerca de mi </a></li>
-                    <li><a href="#skills" class="link main-nav-link">Mis Habilidades <span>&nbsp;&frasl;&gt;</span></a>
-                    </li>
-                    <li><a href="html/curriculum.html" class="link main-nav-link">Curriculum
-                            <span>&nbsp;&frasl;&gt;</span></a></li>
-                    <li><a href="#contact" class="link main-nav-link">Contacto <span>&nbsp;&frasl;&gt;</span></a></li>
+                    <li><a href="#about" class="link main-nav-link">Acerca de mí</a></li>
+                    <li><a href="#skills" class="link main-nav-link">Mis Habilidades</a></li>
+                    <li><a href="html/curriculum.html" class="link main-nav-link">Curriculum</a></li>
+                    <li><a href="#contact" class="link main-nav-link">Contacto</a></li>
                 </ul>
             </div>
-            <div class="nav-toggle">
+            <button class="nav-toggle" aria-label="Abrir menú">
                 <ion-icon name="menu-outline" class="nav-icon"></ion-icon>
+            </button>
+            <button class="nav-toggle" aria-label="Cerrar menú" hidden>
                 <ion-icon name="close-outline" class="nav-icon"></ion-icon>
-            </div>
+            </button>
         </nav>
     </header>
 
+
     <main>
+        <!-- Sección principal -->
         <section class="section-home flex-row-center" id="section-home">
+            <!-- Contenedor principal -->
             <div class="container">
+                <!-- Enlaces sociales a la izquierda -->
                 <div class="side-social-links--left">
                     <ul class="social-links social-links--side">
+                        <!-- LinkedIn -->
                         <li>
                             <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" class="social-link"
                                 target="_blank">
                                 <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
+                        <!-- GitHub -->
                         <li>
                             <a href="https://github.com/carlosmriveraz/CurriculumHTML_CArlosRivera" class="social-link"
                                 target="_blank">
@@ -79,26 +82,33 @@
                         </li>
                     </ul>
                 </div>
+                <!-- Enlaces sociales a la derecha -->
                 <div class="side-social-links--rigth">
                     <ul class="social-links social-links--side">
+                        <!-- Email -->
                         <li>
                             <a href="mailto:carlosmrz100@hotmail.com"
                                 class="link social-link">carlosmrz100@hotmail.com</a>
                         </li>
                     </ul>
                 </div>
+                <!-- Contenedor mediano -->
                 <div class="container-md">
+                    <!-- Hero section -->
                     <div class="hero slide-left">
+                        <!-- Caja de texto del héroe -->
                         <div class="hero-text-box flex-col">
+                            <!-- Título principal del héroe -->
                             <div class="hero-main-title-box">
                                 <p class="enter-text">Bienvenido al
-                                    <a href="html/Aboutpage/about.html" target="_blank">Universo </a> de
+                                    <a href="html/Aboutpage/about.html" target="_blank">Universo</a> de
                                 </p>
                                 <h1 class="heading-primary">CarlosMarioRivera.com</h1>
                                 <p class="hero-subheading">
                                     <span class="animate-subheading"></span>
                                 </p>
                             </div>
+                            <!-- Caja de descripción -->
                             <div class="description-box slide-left">
                                 <p class="description">Desarrollo de Software y BI.
                                     <br><br>Mi objetivo es proporcionar soluciones robustas y de gran utilidad a las
@@ -113,30 +123,37 @@
             </div>
         </section>
 
+
+        <!-- SECCIÓN ACERCA DE MÍ -->
         <section class="section-about" id="about">
             <div class="container">
                 <div class="container-md">
+                    <!-- Título de la sección -->
                     <div class="heading-secondary--left">
                         <h2 class="heading-secondary">
                             Acerca de mí <span>&nbsp;&frasl;&gt;</span>
                         </h2>
                     </div>
+                    <!-- Contenido sobre mí -->
                     <div class="about-box">
+                        <!-- Texto sobre mí -->
                         <div class="about-box--text">
                             <div class="flex-col about-me-text text">
                                 <p>Desarrollador de software con más de 12 años de experiencia, apasionado por la
-                                    creación de aplicaciones robustas y escalables.<br> En desarrollo de aplicaciones,
-                                    he trabajado en proyectos desde la etapa de diseño hasta la implementación.
-                                </p>
-                                <p>Experto en inteligencia de negocios. <br>Mi objetivo es crear soluciones eficientes
-                                    que mejoren la experiencia del usuario.<br> <br> Arquitecto de soluciones con
-                                    experiencia en diseño, implementación y optimización de infraestructuras en la nube.
-                                    <br><br>Auditor interno ISO 27001 <br><br>
-                                </p>
+                                    creación de
+                                    aplicaciones robustas y escalables. En desarrollo de aplicaciones, he trabajado en
+                                    proyectos
+                                    desde la etapa de diseño hasta la implementación.</p>
+                                <p>Experto en inteligencia de negocios. Mi objetivo es crear soluciones eficientes que
+                                    mejoren
+                                    la experiencia del usuario. Arquitecto de soluciones con experiencia en diseño,
+                                    implementación y optimización de infraestructuras en la nube. Auditor interno ISO
+                                    27001.</p>
                             </div>
                         </div>
+                        <!-- Imagen sobre mí -->
                         <div class="about-box--img">
-                            <img src="img/logo.jpg" alt="Photo of carlosmaiorivera" class="about-img" />
+                            <img src="img/logo.jpg" alt="Carlos Mario Rivera" class="about-img" />
                         </div>
                     </div>
                 </div>
@@ -161,23 +178,23 @@
                                 <ul class="skills-data-list">
 
                                     <li class="skills-name">
-                                        <img src="img/frontend/html.png" width="25px"><img />
+                                        <img src="img/frontend/html.webp" width="25px"><img />
                                         <p>HTML</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/css3.png" width="25px"><img />
+                                        <img src="img/frontend/css3.webp" width="25px"><img />
                                         <p>CSS</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/js.png" width="25px"><img />
+                                        <img src="img/frontend/js.webp" width="25px"><img />
                                         <p>Java Script</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/react.png" width="25px"><img />
+                                        <img src="img/frontend/react.webp" width="25px"><img />
                                         <p>React</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/angular.png" width="25px"><img />
+                                        <img src="img/frontend/angular.webp" width="25px"><img />
                                         <p>Angular</p>
                                     </li>
 
@@ -235,6 +252,7 @@
                     <!-- Other habilidades -->
                     <p class="skills-title"><strong>Otras habilidades</strong> (descubre).</p>
                     <ul class="flex-col other-skills-list text">
+                        <!-- Lista de otras habilidades -->
                         <li class="other-skills-item">
                             <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
                             <p><strong>Desarrollo de Software:</strong> .NET(C#,VB), Versionamiento en GitHub,
@@ -262,50 +280,62 @@
             </div>
         </section>
 
-
-
-
-
+        <section class="bi" id="bi">
+            <div class="flex-row-center">
+                <iframe width="960" height="720"
+                    src="https://us-east-2.quicksight.aws.amazon.com/sn/embed/share/accounts/211125786229/dashboards/e27faa3c-7102-4bea-9d4f-57e9c57fad2a?directory_alias=carlosmarioriveraquicksight">
+                </iframe>
+            </div>
+        </section>
+        <!-- SECCIÓN DE CONTACTO -->
         <section class="section-contact padd-section" id="contact">
             <div class="container">
                 <div class="container-md">
+                    <!-- Encabezado de la sección -->
                     <div class="heading-secondary--left">
                         <h2 class="heading-secondary">
                             Contacto <span>&nbsp;&frasl;&gt;</span>
                         </h2>
                     </div>
+                    <!-- Caja de contacto -->
                     <div class="contact-box">
+                        <!-- Texto de contacto -->
                         <div class="contact-box--text">
                             <p>Si deseas ponerte en contacto conmigo, puedes enviarme un correo electrónico a la
-                                siguiente dirección:</p>
+                                siguiente
+                                dirección:</p>
+                            <!-- Enlace de correo electrónico -->
                             <a href="mailto:carlosmrz100@hotmail.com" class="link">carlosmrz100@hotmail.com</a>
                         </div>
                     </div>
-
                 </div>
-            </div>
             </div>
         </section>
     </main>
-
+    <!-- Footer -->
     <footer class="section-footer">
-
-        <nav class="flex-row">
-
-
-            <a href="#" class="logo-link"><img src="img/logo.jpg" alt="carlosmaiorivera Logo" class="logo" /></a>
-            <ul class="nav-list">
-                <li><a href="html/Aboutpage/about.html" target="_blank">Hobbies </a></li>
-                <li><a href="#about" class="social-links">Acerca de mi </a></li>
-                <li><a href="#skills" class="social-links">Mis Habilidades </a>
-                </li>
-
-            </ul>
-            </div>
-
-        </nav>
-        <p class="flex-row-center">&copy; 2024 Carlos Mario Rivera. Todos los derechos reservados.</p>
+        <div class="containerfooter">
+            <!-- Navegación del footer -->
+            <nav class="footer-nav">
+                <!-- Logo -->
+                <a href="#" class="logo-link">
+                    <img src="img/logo.jpg" alt="Logo de Carlos Mario Rivera" class="logo" />
+                </a>
+                <!-- Lista de navegación -->
+                <ul class="nav-list">
+                    <li><a href="html/Aboutpage/about.html" target="_blank">Hobbies</a></li>
+                    <li><a href="#about" class="link">Acerca de mí</a></li>
+                    <li><a href="#skills" class="link">Mis Habilidades</a></li>
+                </ul>
+            </nav>
+            <!-- Derechos de autor -->
+            <p class="copyright">
+                © 2024 Carlos Mario Rivera. Todos los derechos reservados.
+            </p>
+        </div>
     </footer>
+
+
 
     <!-- Ionicons -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
