--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                         <li class="other-skills-item">
                             <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
                             <p><strong>Facturación electrónica:</strong> UBL, XML, JSON.</p>
+                            
                         </li>
                     </ul>
 
@@ -281,6 +282,16 @@
         </section>
 
         <section class="bi" id="bi">
+                <div class="heading-secondary--right">
+                    <h2 class="heading-secondary">
+                        <span> &lt;&frasl;&nbsp;</span>Businnes Itenlligence - en contrucción 
+                    </h2>
+                                    <div class="heading-secondary--right">
+                                        <h2 class="heading-secondary">
+                                            <span> &lt;&frasl;&nbsp;</span>muestra los precios del dolar en los ultimos dias y genera una panel de quick sgiht.  
+                                        </h2>
+                </div>
+                      </div>
             <div class="flex-row-center">
                 <iframe width="960" height="720"
                     src="https://us-east-2.quicksight.aws.amazon.com/sn/embed/share/accounts/211125786229/dashboards/e27faa3c-7102-4bea-9d4f-57e9c57fad2a?directory_alias=carlosmarioriveraquicksight">
