--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
     <header class="section-header">
-        <nav class="nav flex-row">
+        <nav class="nav flex-row-center">
             <a href="#" class="logo-link">
                 <img src="img/logo.jpg" alt="Logo de Carlos Mario Rivera" class="logo" />
             </a>
@@ -103,7 +103,7 @@
                                 <p class="enter-text">Bienvenido al
                                     <a href="html/Aboutpage/about.html" target="_blank">Universo</a> de
                                 </p>
-                                <h1 class="heading-primary">CarlosMarioRivera.com</h1>
+                                <h2 class="heading-secondary">CarlosMarioRivera.com</h2>
                                 <p class="hero-subheading">
                                     <span class="animate-subheading"></span>
                                 </p>
@@ -273,7 +273,7 @@
                         <li class="other-skills-item">
                             <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
                             <p><strong>Facturación electrónica:</strong> UBL, XML, JSON.</p>
-                            
+
                         </li>
                     </ul>
 
@@ -281,22 +281,22 @@
             </div>
         </section>
 
-        <section class="bi" id="bi">
-                <div class="heading-secondary--right">
-                    <h2 class="heading-secondary">
-                        <span> &lt;&frasl;&nbsp;</span>Businnes Itenlligence - en contrucción 
-                    </h2>
-                                    <div class="heading-secondary--right">
-                                        <h2 class="heading-secondary">
-                                            <span> &lt;&frasl;&nbsp;</span>muestra los precios del dolar en los ultimos dias y genera una panel de quick sgiht.  
-                                        </h2>
-                </div>
-                      </div>
-            <div class="flex-row-center">
-                <iframe width="960" height="720"
-                    src="https://us-east-2.quicksight.aws.amazon.com/sn/embed/share/accounts/211125786229/dashboards/e27faa3c-7102-4bea-9d4f-57e9c57fad2a?directory_alias=carlosmarioriveraquicksight">
+        <section>
+            <div class="container-md">
+                <h2 class="flex-col">
+                    Businnes Itenlligence - en contrucción
+                </h2>
+
+                <h2 class="heading-secondary">
+                    Muestra los precios del dólar en los últimos días y genera un panel de Businnes Itenlligence
+                </h2>
+
+
+                <!--                 <iframe width="400" height="350"
+                        src="https://us-east-2.quicksight.aws.amazon.com/sn/embed/share/accounts/211125786229/dashboards/e27faa3c-7102-4bea-9d4f-57e9c57fad2a?directory_alias=carlosmarioriveraquicksight">
+                    </iframe> -->
+                <iframe src="html/bi/bi.html" width="100%" height="1000">
                 </iframe>
-            </div>
         </section>
         <!-- SECCIÓN DE CONTACTO -->
         <section class="section-contact padd-section" id="contact">
