--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos Mario Rivera & Portfolio</title>
+    <title>Carlos Mario Rivera & Portfolio carlosmariorivera.com </title>
     <meta name="description" content="Personal Portfolio website of Carlos Mario Rivera. A mobile dev designer.">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon32.png">
