--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos Mario Rivera & Portfolio carlosmariorivera.com </title>
+    <title>Carlos Mario Rivera & Portfolio</title>
     <meta name="description" content="Personal Portfolio website of Carlos Mario Rivera. A mobile dev designer.">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon32.png">
@@ -19,24 +19,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/general.css">
+
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
-    <link rel="stylesheet" href="css/cookie_consent.css">
-    <link rel="stylesheet" href="css/scrollefects.css">
-    <!-- Comentado hasta confirmar la necesidad de estos archivos
-    <link rel="stylesheet" href="css/slideraws.css">
-    <link rel="stylesheet" href="css/silder2aws.css"> -->
     <link rel="stylesheet" href="css/styles3.css">
-
+    <link rel="stylesheet" href="css/general.css">
 
 </head>
 
-
 <body>
 
-    <header class="section-header">
-        <nav class="nav flex-row-center">
+    <header>
+        <nav class="nav-menu" aria-label="Site menu">
             <a href="#" class="logo-link">
                 <img src="img/logo.jpg" alt="Logo de Carlos Mario Rivera" class="logo" />
             </a>
@@ -49,11 +43,11 @@
                 </ul>
             </div>
             <button class="nav-toggle" aria-label="Abrir menú">
-                <ion-icon name="menu-outline" class="nav-icon"></ion-icon>
-            </button>
+            <ion-icon name="menu-outline" class="nav-icon"></ion-icon>
+        </button>
             <button class="nav-toggle" aria-label="Cerrar menú" hidden>
-                <ion-icon name="close-outline" class="nav-icon"></ion-icon>
-            </button>
+            <ion-icon name="close-outline" class="nav-icon"></ion-icon>
+        </button>
         </nav>
     </header>
 
@@ -68,15 +62,13 @@
                     <ul class="social-links social-links--side">
                         <!-- LinkedIn -->
                         <li>
-                            <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" class="social-link"
-                                target="_blank">
+                            <a href="https://www.linkedin.com/in/bi-aws-carlosmariorivera" class="social-link" target="_blank">
                                 <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                             </a>
                         </li>
                         <!-- GitHub -->
                         <li>
-                            <a href="https://github.com/carlosmriveraz/CurriculumHTML_CArlosRivera" class="social-link"
-                                target="_blank">
+                            <a href="https://github.com/carlosmriveraz/CurriculumHTML_CArlosRivera" class="social-link" target="_blank">
                                 <ion-icon class="link social-icon" name="logo-github"></ion-icon>
                             </a>
                         </li>
@@ -87,8 +79,7 @@
                     <ul class="social-links social-links--side">
                         <!-- Email -->
                         <li>
-                            <a href="mailto:carlosmrz100@hotmail.com"
-                                class="link social-link">carlosmrz100@hotmail.com</a>
+                            <a href="mailto:carlosmrz100@hotmail.com" class="link social-link">carlosmrz100@hotmail.com</a>
                         </li>
                     </ul>
                 </div>
@@ -100,19 +91,17 @@
                         <div class="hero-text-box flex-col">
                             <!-- Título principal del héroe -->
                             <div class="hero-main-title-box">
-                                <p class="enter-text">Bienvenido al
-                                    <a href="html/Aboutpage/about.html" target="_blank">Universo</a> de
+                                <p class="enter-text">Bienvenido a CarlosMarioRivera.com
+
                                 </p>
-                                <h2 class="heading-secondary">CarlosMarioRivera.com</h2>
                                 <p class="hero-subheading">
-                                    <span class="animate-subheading"></span>
+                                    <span class="animate-subheading">CarlosMarioRivera.com</span>
                                 </p>
                             </div>
                             <!-- Caja de descripción -->
                             <div class="description-box slide-left">
                                 <p class="description">Desarrollo de Software y BI.
-                                    <br><br>Mi objetivo es proporcionar soluciones robustas y de gran utilidad a las
-                                    personas
+                                    <br><br>Mi objetivo es proporcionar soluciones robustas y de gran utilidad a las personas
                                 </p>
                                 <a href="html/curriculum.html" class="link btn btn-outline" target="_blank">Mi
                                     Curriculum</a>
@@ -139,16 +128,10 @@
                         <!-- Texto sobre mí -->
                         <div class="about-box--text">
                             <div class="flex-col about-me-text text">
-                                <p>Desarrollador de software con más de 12 años de experiencia, apasionado por la
-                                    creación de
-                                    aplicaciones robustas y escalables. En desarrollo de aplicaciones, he trabajado en
-                                    proyectos
-                                    desde la etapa de diseño hasta la implementación.</p>
-                                <p>Experto en inteligencia de negocios. Mi objetivo es crear soluciones eficientes que
-                                    mejoren
-                                    la experiencia del usuario. Arquitecto de soluciones con experiencia en diseño,
-                                    implementación y optimización de infraestructuras en la nube. Auditor interno ISO
-                                    27001.</p>
+                                <p>Desarrollador de software con más de 12 años de experiencia, apasionado por la creación de aplicaciones robustas y escalables. En desarrollo de aplicaciones, he trabajado en proyectos desde la etapa de diseño hasta la implementación.</p>
+                                <p>Experto en inteligencia de negocios. Mi objetivo es crear soluciones eficientes que mejoren la experiencia del usuario. Arquitecto de soluciones con experiencia en diseño, implementación y optimización de infraestructuras
+                                    en la nube. Auditor interno ISO 27001.
+                                </p>
                             </div>
                         </div>
                         <!-- Imagen sobre mí -->
@@ -178,23 +161,23 @@
                                 <ul class="skills-data-list">
 
                                     <li class="skills-name">
-                                        <img src="img/frontend/html.webp" width="25px"><img />
+                                        <img src="img/frontend/html.webp" width="25px" alt="logo de html" />
                                         <p>HTML</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/css3.webp" width="25px"><img />
+                                        <img src="img/frontend/css3.webp" width="25px" alt="logo de cc3" />
                                         <p>CSS</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/js.webp" width="25px"><img />
+                                        <img src="img/frontend/js.webp" width="25px" alt="logo de java script" />
                                         <p>Java Script</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/react.webp" width="25px"><img />
+                                        <img src="img/frontend/react.webp" width="25px" alt="logo de react" />
                                         <p>React</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="img/frontend/angular.webp" width="25px"><img />
+                                        <img src="img/frontend/angular.webp" width="25px" alt="logo de Angular" />
                                         <p>Angular</p>
                                     </li>
 
@@ -210,13 +193,13 @@
                                 <ul class="skills-data-list">
 
                                     <li class="skills-name">
-                                        <img src="img/aws/ec2.png" width="25px" alt="ec2"><img />
+                                        <img src="img/aws/ec2.png" width="25px" alt="ec2" alt="Logo ec2">
                                         <p>EC2</p>
                                     </li>
 
 
                                     <li class="skills-name">
-                                        <img src="img/aws/s3.png" width="25px" alt="s3"></img>
+                                        <img src="img/aws/s3.png" width="25px" alt="s3" />
                                         <p>S3</p>
                                     </li>
 
@@ -255,8 +238,8 @@
                         <!-- Lista de otras habilidades -->
                         <li class="other-skills-item">
                             <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
-                            <p><strong>Desarrollo de Software:</strong> .NET(C#,VB), Versionamiento en GitHub,
-                                SubVersion.</p>
+                            <p><strong>Desarrollo de Software:</strong> .NET(C#,VB), Versionamiento en GitHub, SubVersion.
+                            </p>
                         </li>
                         <li class="other-skills-item">
                             <ion-icon class="other-skills-icon" name="chevron-forward-outline"></ion-icon>
@@ -292,11 +275,11 @@
                 </h2>
 
 
-                <!--                 <iframe width="400" height="350"
-                        src="https://us-east-2.quicksight.aws.amazon.com/sn/embed/share/accounts/211125786229/dashboards/e27faa3c-7102-4bea-9d4f-57e9c57fad2a?directory_alias=carlosmarioriveraquicksight">
-                    </iframe> -->
-                <iframe src="html/bi/bi.html" width="100%" height="1000">
-                </iframe>
+                <!-- <frameset rows="50%,50%"> -->
+                <iframe name="bi frame" src="html/bi/bi.html" width="100%" height="800">
+    </iframe>
+                <!-- <frame src="pagina2.html" name="marco2"> -->
+                <!-- </frameset> -->
         </section>
         <!-- SECCIÓN DE CONTACTO -->
         <section class="section-contact padd-section" id="contact">
@@ -312,9 +295,8 @@
                     <div class="contact-box">
                         <!-- Texto de contacto -->
                         <div class="contact-box--text">
-                            <p>Si deseas ponerte en contacto conmigo, puedes enviarme un correo electrónico a la
-                                siguiente
-                                dirección:</p>
+                            <p>Si deseas ponerte en contacto conmigo, puedes enviarme un correo electrónico a la siguiente dirección:
+                            </p>
                             <!-- Enlace de correo electrónico -->
                             <a href="mailto:carlosmrz100@hotmail.com" class="link">carlosmrz100@hotmail.com</a>
                         </div>
@@ -327,7 +309,7 @@
     <footer class="section-footer">
         <div class="containerfooter">
             <!-- Navegación del footer -->
-            <nav class="footer-nav">
+            <nav aria-label="footer" class="footer-nav">
                 <!-- Logo -->
                 <a href="#" class="logo-link">
                     <img src="img/logo.jpg" alt="Logo de Carlos Mario Rivera" class="logo" />
