--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         content="Portafolio profesional de Carlos Mario Rivera, especialista en BI, Big Data, AWS y data pipelines.">
     <meta property="og:image" content="URL de tu imagen profesional">
     <meta property="og:title" content="Carlos Mario Rivera - Experto en BI y Big Data">
-    <meta property="og:url" content="http://carlosmariorivera.com">
+    <meta property="og:url" content="carlosmariorivera.com">
 
     <!-- Title -->
     <title>Carlos Mario Rivera - Portafolio</title>
